<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTP_Register">
    <LinearLayout
        android:id="@+id/ll1_otp_reg"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="24dp">

        <EditText

            android:textAlignment="center"
            android:id="@+id/editText_phone_otp_reg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/custom_edittext_1"
            android:drawableLeft="@drawable/left_icon_phone"

            android:ems="10"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/prephoneno"
            android:inputType="text|phone"


            android:padding="5dp"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText

            android:textAlignment="center"
            android:id="@+id/editText_input_otp_otp_reg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="12dp"
            android:visibility="invisible"



            android:ems="10"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/enter_otp"
            android:inputType="text|phone"


            android:padding="5dp"
            android:textColor="#000000"
            android:textSize="18sp" />


        <Button
            android:id="@+id/button_getOTP_otp_reg"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_button_1_outline"
            android:elevation="12dp"

            android:fontFamily="sans-serif-black"
            android:text="@string/get_otp"
            android:textColor="#f44336"
            android:textSize="22sp" />
        <ProgressBar
            android:id="@+id/progressBar_otp_reg"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/ll2_otp_reg"
       android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="24dp">
        <Button
            android:id="@+id/button_reg_migrant_otp_reg"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_button_1"
            android:elevation="12dp"

            android:fontFamily="sans-serif-black"
            android:text="@string/register_migrant"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:visibility="invisible"
            />
        <Button
            android:id="@+id/button_reg_local_otp_reg"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_button_1"
            android:elevation="12dp"


            android:fontFamily="sans-serif-black"
            android:text="@string/register_local"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:visibility="invisible"/>

    </LinearLayout>

</RelativeLayout>